[gd_scene load_steps=20 format=3 uid="uid://cbiq60fq5wx"]

[ext_resource type="Script" uid="uid://dl3genud7au2d" path="res://SCENES/MAIN/2 - CENTER/1 - Fight_ZONE/Fight_ZONE.gd" id="1_mxm40"]
[ext_resource type="Script" uid="uid://cfxa54w24myu0" path="res://SCENES/MAIN/2 - CENTER/1 - Fight_ZONE/States_MachinesFight/states_machineFight.gd" id="2_n8o8w"]
[ext_resource type="Script" uid="uid://b5te4cutppmfp" path="res://SCENES/MAIN/2 - CENTER/1 - Fight_ZONE/States_MachinesFight/States/await_fight.gd" id="3_6qr6t"]
[ext_resource type="Script" uid="uid://cohg8lroncyxq" path="res://SCENES/MAIN/2 - CENTER/1 - Fight_ZONE/States_MachinesFight/States/init_fight.gd" id="3_t0g6e"]
[ext_resource type="Script" uid="uid://c7nm1cvj6lubs" path="res://SCENES/MAIN/2 - CENTER/1 - Fight_ZONE/States_MachinesFight/States/start_round.gd" id="4_6qr6t"]
[ext_resource type="Script" uid="uid://bwcpjjwgjqj5i" path="res://SCENES/MAIN/2 - CENTER/1 - Fight_ZONE/States_MachinesFight/States/start_turn.gd" id="5_jjf73"]
[ext_resource type="Script" uid="uid://blb08jsw2k5xl" path="res://SCENES/MAIN/2 - CENTER/1 - Fight_ZONE/States_MachinesFight/States/do_turn.gd" id="6_6qr6t"]
[ext_resource type="Script" uid="uid://bqnirc82q4kxl" path="res://SCENES/MAIN/2 - CENTER/1 - Fight_ZONE/placement_manager.gd" id="6_t0g6e"]
[ext_resource type="Script" uid="uid://c72w7lqe6h5a3" path="res://SCENES/MAIN/2 - CENTER/1 - Fight_ZONE/States_MachinesFight/States/end_turn.gd" id="6_ya80m"]
[ext_resource type="Script" uid="uid://bb5ex16f1dnnv" path="res://SCENES/MAIN/2 - CENTER/1 - Fight_ZONE/Pool.gd" id="7_6qr6t"]
[ext_resource type="Script" uid="uid://cf2230hqk3kqc" path="res://SCENES/MAIN/2 - CENTER/1 - Fight_ZONE/States_MachinesFight/States/end_round.gd" id="7_tx0i4"]
[ext_resource type="Script" uid="uid://cihlldlruqiex" path="res://SCENES/MAIN/2 - CENTER/1 - Fight_ZONE/States_MachinesFight/States/end_fight.gd" id="8_ufjjl"]
[ext_resource type="Script" uid="uid://c32cqmshksyn1" path="res://SCENES/MAIN/2 - CENTER/1 - Fight_ZONE/fight_manager.gd" id="10_6qr6t"]
[ext_resource type="Texture2D" uid="uid://dmdb8i0nk5agx" path="res://ASSETS/VISUAL/UI-visual/Fight_Selector.png" id="13_t0g6e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jsxww"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t0g6e"]
bg_color = Color(0.898039, 0.898039, 0.898039, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="Animation" id="Animation_jjf73"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size_flags_stretch_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(2, 9.18958),
"update": 0,
"values": [2.5, 0.5]
}

[sub_resource type="Animation" id="Animation_6qr6t"]
resource_name = "start_fight"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size_flags_stretch_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 0.189465),
"update": 0,
"values": [0.5, 2.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ya80m"]
_data = {
&"RESET": SubResource("Animation_jjf73"),
&"start_fight": SubResource("Animation_6qr6t")
}

[node name="Fight_Zone" type="PanelContainer" node_paths=PackedStringArray("Turn_Timer", "progress_bar", "allies_pool", "enemies_pool")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
script = ExtResource("1_mxm40")
Turn_Timer = NodePath("Turn_Timer")
progress_bar = NodePath("VBoxContainer/MarginContainer/HBoxContainer/ProgressBar")
allies_pool = NodePath("VBoxContainer/HBoxContainer/Allies/MarginContainer/Allies_row_y/Allies_Pool")
enemies_pool = NodePath("VBoxContainer/HBoxContainer/Enemies/MarginContainer_meetingpoint/Enemies_row_y/Enemies_Pool")

[node name="StatesMachineFIGHT" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
unique_name_in_owner = true
script = ExtResource("2_n8o8w")
initial_state = NodePath("Await_FIGHT")
metadata/_custom_type_script = "uid://cfxa54w24myu0"

[node name="Await_FIGHT" type="Node" parent="StatesMachineFIGHT"]
unique_name_in_owner = true
script = ExtResource("3_6qr6t")
metadata/_custom_type_script = "uid://b5te4cutppmfp"

[node name="Init_FIGHT" type="Node" parent="StatesMachineFIGHT" node_paths=PackedStringArray("Turn_timer", "fight_zone", "entity")]
unique_name_in_owner = true
script = ExtResource("3_t0g6e")
Turn_timer = NodePath("")
fight_zone = NodePath("../..")
entity = NodePath("..")
metadata/_custom_type_script = "uid://ixkr78msrlfh"

[node name="Init_Fight_Timer" type="Timer" parent="StatesMachineFIGHT/Init_FIGHT"]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="Start_ROUND" type="Node" parent="StatesMachineFIGHT" node_paths=PackedStringArray("Turn_timer", "fight_zone", "entity")]
unique_name_in_owner = true
script = ExtResource("4_6qr6t")
Turn_timer = NodePath("")
fight_zone = NodePath("../..")
entity = NodePath("..")
metadata/_custom_type_script = "uid://ixkr78msrlfh"

[node name="Start_TURN" type="Node" parent="StatesMachineFIGHT" node_paths=PackedStringArray("Turn_timer", "fight_zone", "entity")]
unique_name_in_owner = true
script = ExtResource("5_jjf73")
Turn_timer = NodePath("")
fight_zone = NodePath("../..")
entity = NodePath("..")
metadata/_custom_type_script = "uid://ixkr78msrlfh"

[node name="Do_TURN" type="Node" parent="StatesMachineFIGHT" node_paths=PackedStringArray("Turn_timer", "fight_zone", "entity")]
unique_name_in_owner = true
script = ExtResource("6_6qr6t")
Turn_timer = NodePath("")
fight_zone = NodePath("../..")
entity = NodePath("..")
metadata/_custom_type_script = "uid://ixkr78msrlfh"

[node name="FIGHT_manager" type="Node" parent="StatesMachineFIGHT/Do_TURN"]
unique_name_in_owner = true
script = ExtResource("10_6qr6t")

[node name="End_TURN" type="Node" parent="StatesMachineFIGHT" node_paths=PackedStringArray("Turn_timer", "fight_zone", "entity")]
unique_name_in_owner = true
script = ExtResource("6_ya80m")
Turn_timer = NodePath("")
fight_zone = NodePath("../..")
entity = NodePath("..")
metadata/_custom_type_script = "uid://ixkr78msrlfh"

[node name="End_ROUND" type="Node" parent="StatesMachineFIGHT" node_paths=PackedStringArray("Turn_timer", "fight_zone", "entity")]
unique_name_in_owner = true
script = ExtResource("7_tx0i4")
Turn_timer = NodePath("")
fight_zone = NodePath("../..")
entity = NodePath("..")
metadata/_custom_type_script = "uid://ixkr78msrlfh"

[node name="End_FIGHT" type="Node" parent="StatesMachineFIGHT" node_paths=PackedStringArray("Turn_timer", "fight_zone", "entity")]
unique_name_in_owner = true
script = ExtResource("8_ufjjl")
Turn_timer = NodePath("")
fight_zone = NodePath("../..")
entity = NodePath("..")
metadata/_custom_type_script = "uid://ixkr78msrlfh"

[node name="Placement Manager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_t0g6e")

[node name="Turn_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.06
theme_override_constants/margin_left = 3
theme_override_constants/margin_right = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_jsxww")
theme_override_styles/fill = SubResource("StyleBoxFlat_t0g6e")
show_percentage = false

[node name="Fight_State" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Allies" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/Allies"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 35

[node name="Allies_row_y" type="Control" parent="VBoxContainer/HBoxContainer/Allies/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Allies_Pool" type="Node2D" parent="VBoxContainer/HBoxContainer/Allies/MarginContainer/Allies_row_y" node_paths=PackedStringArray("Row")]
unique_name_in_owner = true
script = ExtResource("7_6qr6t")
Row = NodePath("..")

[node name="Selected_A" type="Sprite2D" parent="VBoxContainer/HBoxContainer/Allies"]
unique_name_in_owner = true
visible = false
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("13_t0g6e")

[node name="Enemies" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer_meetingpoint" type="MarginContainer" parent="VBoxContainer/HBoxContainer/Enemies"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 35

[node name="Enemies_row_y" type="Control" parent="VBoxContainer/HBoxContainer/Enemies/MarginContainer_meetingpoint"]
unique_name_in_owner = true
layout_mode = 2

[node name="Enemies_Pool" type="Node2D" parent="VBoxContainer/HBoxContainer/Enemies/MarginContainer_meetingpoint/Enemies_row_y" node_paths=PackedStringArray("Row")]
unique_name_in_owner = true
script = ExtResource("7_6qr6t")
Row = NodePath("..")
Alignement = 1

[node name="Selected_E" type="Sprite2D" parent="VBoxContainer/HBoxContainer/Enemies"]
unique_name_in_owner = true
visible = false
texture_filter = 1
position = Vector2(-4, 0)
scale = Vector2(2, 2)
texture = ExtResource("13_t0g6e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_ya80m")
}

[connection signal="start_fight" from="." to="StatesMachineFIGHT/Await_FIGHT" method="_on_fight_zone_start_fight"]
[connection signal="timeout" from="StatesMachineFIGHT/Init_FIGHT/Init_Fight_Timer" to="StatesMachineFIGHT/Init_FIGHT" method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="StatesMachineFIGHT/Init_FIGHT" method="_on_animation_player_animation_finished"]
